# borscht

./: Cargo.toml  README.md
borscht/: Cargo.toml  README.md
borscht-visualizer/: Cargo.toml  README.md
borscht-visualizer/src/: lib.rs  palettes.rs
borscht/src/: bounded_list.rs  cfeature.rs  cftree.rs  display.rs  lib.rs  point.rs
borscht/src/cfeature/: betula.rs  birch.rs
datagen/: Cargo.toml  README.md
datagen/src/: distribution.rs  lib.rs
datagen/src/distribution/: multilabel.rs  multivariate_normal.rs  multivariate_uniform.rs
test-suite/: Cargo.toml  README.md
test-suite/src/: lib.rs  mvn.rs  sample.rs
