[package]
name = "borscht-visualizer"
version = "0.1.0"
authors = ["Jamie Blondin <jblondin@spoonflower.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borscht = { path = "../borscht" }
plotters = "0.3"
plotters-backend = "0.3"
plotters-bitmap = "0.3"
thiserror = "1.0"