[package]
name = "borscht"
version = "0.1.0"
authors = ["Jamie Blondin <jblondin@spoonflower.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
thiserror = "1.0"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }