[package]
name = "datagen"
version = "0.1.0"
authors = ["Jamie Blondin <jblondin@spoonflower.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_distr = "0.4"
nalgebra = "0.27"
thiserror = "1.0"
num = "0.2"
