[package]
name = "test-suite"
version = "0.1.0"
authors = ["Jamie Blondin <jblondin@spoonflower.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borscht = { path = "../borscht" }
borscht-visualizer = { path = "../borscht-visualizer" }
datagen = { path = "../datagen" }
rand = "0.8"
rand_xoshiro = "0.6"
structopt = "0.3"
